--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <link rel="stylesheet" href="assets/style.css">
 </head>
 <body>
-    
+    <script src="assets/js/main.js"></script>
 </body>
 </html>
