feat: add header in index.html and stylize it

--- a/index.html
+++ b/index.html
@@ -10,6 +10,11 @@
     <link href="https://fonts.googleapis.com/css2?family=Sixtyfour+Convergence&display=swap" rel="stylesheet">
 </head>
 <body>
+    <header>
+        <h1>GIT</h1>
+        <hr>
+    </header>
+    
     <script src="assets/js/main.js"></script>
 </body>
 </html>
