feat: add body markup in index.html

--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
         <h1>GIT</h1>
         <hr>
     </header>
+
+    <p align="center">🙏</p>
     
     <script src="assets/js/main.js"></script>
 </body>
