feat: add footer in index.html

--- a/index.html
+++ b/index.html
@@ -16,7 +16,9 @@
     </header>
 
     <p align="center">🙏</p>
-    
+    <footer>
+        <p>this is footer</p>
+    </footer>
     <script src="assets/js/main.js"></script>
 </body>
 </html>
